:sparkles: Asynchronous endpoints
