# docs/swagger.yaml
@@ -1,39 +1,5 @@
 components:
   schemas:
-    BatchError:
-      properties:
-        code:
-          type: string
-        error:
-          type: string
-        field:
-          type: string
-      required:
-      - error
-      type: object
-    BatchErrorResponse:
-      properties:
-        errors:
-          items:
-            $ref: '#/components/schemas/BatchError'
-          type: array
-          uniqueItems: false
-        id:
-          type: string
-        status_code:
-          type: string
-      required:
-      - status_code
-      type: object
-    BatchResponse:
-      properties:
-        id:
-          type: string
-        status_code:
-          type: string
-      required:
-      - status_code
-      type: object
     Case:
       properties:
         diagnostic_lab_code:
@@ -411,6 +377,40 @@ components:
       required:
       - samples
       type: object
+    OperationError:
+      properties:
+        code:
+          type: string
+        error:
+          type: string
+        field:
+          type: string
+      required:
+      - error
+      type: object
+    OperationErrorResponse:
+      properties:
+        errors:
+          items:
+            $ref: '#/components/schemas/OperationError'
+          type: array
+          uniqueItems: false
+        id:
+          type: string
+        status_code:
+          type: string
+      required:
+      - status_code
+      type: object
+    OperationResponse:
+      properties:
+        operation_id:
+          type: string
+        status_code:
+          type: string
+      required:
+      - status_code
+      type: object
     PartialCase:
       properties:
         diagnostic_lab_code:
@@ -538,6 +538,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/CaseSuccessResponse'
           description: Created
+        "202":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OperationResponse'
+          description: Accepted
         "400":
           content:
             application/json:
@@ -575,6 +581,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/CaseSuccessResponse'
           description: OK
+        "202":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OperationResponse'
+          description: Accepted
         "400":
           content:
             application/json:
@@ -603,13 +615,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchResponse'
+                $ref: '#/components/schemas/OperationResponse'
           description: Accepted
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
+                $ref: '#/components/schemas/OperationErrorResponse'
           description: Bad Request
         "401":
           description: Unauthorized
@@ -618,11 +630,11 @@ paths:
       summary: Create a batch of cases
       tags:
       - Cases
-  /cases/batch/{id}:
+  /operations/{id}:
     get:
-      description: Get the current status of a batch job by ID
+      description: Get status of an asynchronous operation
       parameters:
-      - description: batch id
+      - description: operation id
         in: path
         name: id
         required: true
@@ -633,21 +645,21 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchResponse'
+                $ref: '#/components/schemas/OperationResponse'
           description: Created
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
+                $ref: '#/components/schemas/OperationErrorResponse'
           description: Bad Request
         "401":
           description: Unauthorized
       security:
       - bearerauth: []
-      summary: Get status of a batch of cases
+      summary: Get status of an asynchronous operation
       tags:
-      - Cases
+      - Operations
   /patients/batch:
     post:
       description: Accepts a JSON array of Patients
@@ -663,49 +675,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchResponse'
+                $ref: '#/components/schemas/OperationResponse'
           description: Accepted
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
+                $ref: '#/components/schemas/OperationErrorResponse'
           description: Bad Request
         "401":
           description: Unauthorized
       security:
       - bearerauth: []
       summary: Create a batch of patients
-      tags:
-      - Patients
-  /patients/batch/{id}:
-    get:
-      description: Get the current status of a batch job by ID
-      parameters:
-      - description: batch id
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-      responses:
-        "201":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BatchResponse'
-          description: Created
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
-          description: Bad Request
-        "401":
-          description: Unauthorized
-      security:
-      - bearerauth: []
-      summary: Get status of a batch of patients
       tags:
       - Patients
   /samples/batch:
@@ -723,49 +705,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchResponse'
+                $ref: '#/components/schemas/OperationResponse'
           description: Accepted
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
+                $ref: '#/components/schemas/OperationErrorResponse'
           description: Bad Request
         "401":
           description: Unauthorized
       security:
       - bearerauth: []
       summary: Create a batch of samples
-      tags:
-      - Samples
-  /samples/batch/{id}:
-    get:
-      description: Get the current status of a batch job by ID
-      parameters:
-      - description: batch id
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-      responses:
-        "201":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BatchResponse'
-          description: Created
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BatchErrorResponse'
-          description: Bad Request
-        "401":
-          description: Unauthorized
-      security:
-      - bearerauth: []
-      summary: Get status of a batch of samples
       tags:
       - Samples
 servers:
