# internal/handlers/cases.go
@@ -1,11 +1,9 @@
 package handlers
 
 import (
-	"net/http"
-	"strings"
-
 	"github.com/gin-gonic/gin"
 	"github.com/radiant-network/radiant-case-api/internal/types"
+	"net/http"
 )
 
 // CreateCasesBatch godoc
@@ -15,22 +13,22 @@ import (
 // @Accept json
 // @Produce json
 // @Param payload	body		types.ListCases	true	"List Cases"
-// @Success 202 {object} types.BatchResponse
-// @Failure 400 {object} types.BatchErrorResponse
+// @Success 202 {object} types.OperationResponse
+// @Failure 400 {object} types.OperationErrorResponse
 // @Failure 401
 // @Security bearerauth
 // @Router /cases/batch [post]
 func CreateCasesBatch(c *gin.Context) {
 	var batch types.ListCases
 	if err := c.ShouldBindJSON(&batch); err != nil {
-		batchError := types.BatchError{
+		batchError := types.OperationError{
 			Code:  "invalid_request",
 			Error: err.Error(),
 		}
-		c.JSON(http.StatusBadRequest, types.BatchErrorResponse{Status: "error", Id: "batch_12345", Errors: types.JsonArray[types.BatchError]{batchError}})
+		c.JSON(http.StatusBadRequest, types.OperationErrorResponse{Status: "error", Id: "batch_12345", Errors: types.JsonArray[types.OperationError]{batchError}})
 		return
 	}
-	c.JSON(http.StatusAccepted, types.BatchResponse{Status: "in_progress", Id: "batch_12345"})
+	c.JSON(http.StatusAccepted, types.OperationResponse{Status: "in_progress", OperationId: "batch_12345"})
 }
 
 // CreateCase godoc
@@ -41,6 +39,7 @@ func CreateCasesBatch(c *gin.Context) {
 // @Produce json
 // @Param payload	body types.Case	true	"Case"
 // @Success 201 {object} types.CaseSuccessResponse
+// @Success 202 {object} types.OperationResponse
 // @Failure 400 {object} types.CaseErrorResponse
 // @Failure 401
 // @Security bearerauth
@@ -55,32 +54,13 @@ func CreateCase(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, responseError)
 		return
 	}
-	c.JSON(http.StatusOK, types.CaseSuccessResponse{Id: "12345"})
-}
-
-// GetCasesBatch godoc
-// @Summary Get status of a batch of cases
-// @Description Get the current status of a batch job by ID
-// @Tags Cases
-// @Produce json
-// @Param id path string true "batch id"
-// @Success 201 {object} types.BatchResponse
-// @Failure 400 {object} types.BatchErrorResponse
-// @Failure 401
-// @Security bearerauth
-// @Router /cases/batch/{id} [get]
-func GetCasesBatch(c *gin.Context) {
-	id := c.Param("id")
-	if strings.HasPrefix(id, "error-") {
-		batchErrors := types.JsonArray[types.BatchError]{
-			types.BatchError{Field: "case[0].patient[0]", Error: "Patient with organization_patient_id 123 and organization_code CHOP not found", Code: "PATIENT_NOT_FOUND"},
-			types.BatchError{Field: "case[0].sequencing_experiment[0]", Error: "Sample with submitter_sample_id 123 not found", Code: "SAMPLE_NOT_FOUND"},
-			types.BatchError{Field: "case[0].sequencing_experiment[1].task[3]", Error: "Task type with code unknown not supported", Code: "BAD_TASK_TYPE"},
-		}
-		c.JSON(http.StatusBadRequest, types.BatchErrorResponse{Status: "error", Id: "batch_12345", Errors: batchErrors})
+	if aCase.SequencingExperiments != nil && len(aCase.SequencingExperiments) != 0 {
+		// Simulate async operation for updates that require more processing
+		// e.g., adding sequencing experiments that may involve creating samples, tasks, etc.
+		c.JSON(http.StatusAccepted, types.OperationResponse{Status: "in_progress", OperationId: "batch_12345"})
 		return
 	}
-	c.JSON(http.StatusCreated, types.BatchResponse{Status: "complete", Id: id})
+	c.JSON(http.StatusCreated, types.CaseSuccessResponse{Id: "12345"})
 }
 
 // UpdateCase godoc
@@ -93,6 +73,7 @@ func GetCasesBatch(c *gin.Context) {
 // @Param id path string true "case id"
 // @Param payload body types.PartialCase true "partial fields"
 // @Success 200 {object} types.CaseSuccessResponse
+// @Success 202 {object} types.OperationResponse
 // @Failure 400 {object} types.CaseErrorResponse
 // @Failure 401
 // @Router /cases/{id} [patch]
@@ -107,6 +88,12 @@ func UpdateCase(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, responseError)
 		return
 	}
-
+	if patch.SequencingExperiments != nil && len(patch.SequencingExperiments) != 0 {
+		// Simulate async operation for updates that require more processing
+		// e.g., adding sequencing experiments that may involve creating samples, tasks, etc.
+		c.JSON(http.StatusAccepted, types.OperationResponse{Status: "in_progress", OperationId: "batch_12345"})
+		return
+	}
 	c.JSON(http.StatusOK, types.CaseSuccessResponse{Id: id})
+
 }
